WIP: fortune re-factor